feat: added code to upload both zillow and redfin properties separately
